This is just to motivate myself to improve a little bit every day :)

Best: 24

16-04-2024
Streak: 24
Learned:
Did:
    -Add ordinal strings as string array (try to find what works within compose multiplatform
        limitations, without relying on expect/actual workarounds)
    -Start implementing my own library for fetching Ordinal rules per locale. I'm stubborn so I'd
        rather do this than rely on Moko for Resource Management, or implement it with expect/actual

15-04-2024
Streak: 23
Learned:
    -Read about localising ordinal numbers with plural strings,
        most likely need to use MessageFormat but need to read more about how it works
        and whether it is available in compose multiplatform
Did:

14-04-2024
Streak: 22
Learned:
Did:
    -Ensure SeasonInfo is populated with correct info,
        using inaccurate calculation of Solstices & Equinoxes
    -Clean up logic for making days tick over at 4am instead of midnight
    -Make CalendarState directly accessible to main menu, change background and title based on
        seasonal information.
    -Fix coroutine wake-up logic
    -Add strings for seasons
    -Add Composeable resource functions for seasons
    -Reorganise backlog into directory with separate files
        (this will also let me save notes I'm done with)

13-04-2024
Streak: 21
Learned:
    - Read about Solar Seasons.
Did:
    -Add strings for equinoxes, solstices, and seasonal festivals
    -Rewrite CalendarFragment to use a CalendarState data class, instead of only emitting DayOfWeek
    -Group SeasonInfo as separate data class within CalendarState data class

12-04-2024
Streak: 20
Learned:
Did:
    - Fix, clean up and test Calendar ViewModel and Repository
        but still need to remove CalendarFragment

11-04-2024
Streak: 19
Learned:
Did:
    - Rework getTodayWithOffset to be more configurable, change name as 'today with offset'
        sounds more confusing than clearly pointing out it is a wacky situational implementation.