@@ -23,11 +23,11 @@
     <string name="autumn">Autumn</string>
     <string name="winter">Winter</string>
     <string-array name="ordinal">
-        <item quantity="zero">th</item>
+        <item quantity="zero" />
         <item quantity="one">st</item>
         <item quantity="two">nd</item>
         <item quantity="few">rd</item>
-        <item quantity="many">th</item>
+        <item quantity="many" />
         <item quantity="other">th</item>
     </string-array>
 </resources>
